--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "animate.css": "^3.7.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "ngx-drag-scroll": "^2.0.0-beta.6",
     "primeng": "^6.1.2",
