--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@ng-bootstrap/ng-bootstrap": "^2.2.2",
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
     "@nicky-lenaers/ngx-scroll-to": "^1.0.0",
@@ -31,6 +32,7 @@
     "core-js": "^2.5.4",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
+    "ngx-drag-scroll": "^2.0.0-beta.6",
     "primeng": "^6.1.2",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
