fix(mask): fixed telephone mask

--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,10 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/jquery.maskedinput/src/jquery.maskedinput.js"
+            ]
           },
           "configurations": {
             "production": {
