--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "animate.css": "^3.7.0",
     "bootstrap": "^4.0.0",
     "core-js": "^2.5.4",
+    "jquery": "^3.3.1",
+    "jquery.maskedinput": "^1.4.1",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "ngx-drag-scroll": "^2.0.0-beta.6",
