--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "ngx-drag-scroll": "^2.0.0-beta.6",
+    "ngx-mask": "^6.5.18",
     "primeng": "^6.1.2",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
