--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "animate.css": "^3.7.0",
     "bootstrap": "^4.0.0",
     "core-js": "^2.5.4",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
