feat(angular.json): added staging environment to build config

--- a/angular.json
+++ b/angular.json
@@ -50,7 +50,26 @@
               "vendorChunk": false,
               "buildOptimizer": true,
               "serviceWorker": true
+            },
+            "staging": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.staging.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "serviceWorker": true
             }
+
           }
         },
         "serve": {
@@ -61,6 +80,9 @@
           "configurations": {
             "production": {
               "browserTarget": "databazi-web:build:production"
+            },
+            "staging": {
+              "browserTarget": "databazi-web:build:staging"
             }
           }
         },
