feat(i18n): archives i18n updated with new fields and textss, angular.json read files 'i18n'

--- a/angular.json
+++ b/angular.json
@@ -49,7 +49,11 @@
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": true,
-              "serviceWorker": true
+              "serviceWorker": true,
+              "i18nFile": "src/locale/messages.es.xlf",
+              "i18nFormat": "xlf",
+              "i18nLocale": "es",
+              "i18nMissingTranslation": "error"
             },
             "staging": {
               "fileReplacements": [
@@ -67,7 +71,11 @@
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": true,
-              "serviceWorker": true
+              "serviceWorker": true,
+              "i18nFile": "src/locale/messages.es.xlf",
+              "i18nFormat": "xlf",
+              "i18nLocale": "es",
+              "i18nMissingTranslation": "error"
             }
 
           }
@@ -100,7 +108,7 @@
             },
             "es": {
               "outputPath": "src/locale/",
-              "outFile": "es.xlf",
+              "outFile": "messages.es.xlf",
               "i18nFormat": "xlf",
               "i18nLocale": "es"
             }
