--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
     "@nicky-lenaers/ngx-scroll-to": "^1.0.0",
+    "@sentry/browser": "^4.6.4",
     "animate.css": "^3.7.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
@@ -38,6 +39,7 @@
     "ngx-drag-scroll": "^2.0.0-beta.6",
     "ngx-mask": "^6.5.18",
     "primeng": "^6.1.2",
+    "raven-js": "^3.27.0",
     "rxjs": "^6.3.3",
     "zone.js": "^0.8.26"
   },
