--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "animate.css": "^3.7.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "filepond": "^4.4.10",
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "ngx-drag-scroll": "^2.0.0-beta.6",
+    "ngx-filepond": "^5.0.1",
     "ngx-mask": "^6.5.18",
     "primeng": "^6.1.2",
     "rxjs": "^6.3.3",
