--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ngx-translate/http-loader": "^3.0.1",
     "@nicky-lenaers/ngx-scroll-to": "^1.0.0",
     "@sentry/browser": "^4.6.4",
+    "amplitude-js": "^4.7.0",
     "animate.css": "^3.7.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
