--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "moment": "^2.22.2",
     "ngx-drag-scroll": "^2.0.0-beta.6",
     "ngx-mask": "^6.5.18",
+    "node-sass": "^4.13.1",
     "primeng": "^6.1.2",
     "raven-js": "^3.27.0",
     "rxjs": "^6.3.3",
